--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -2,11 +2,83 @@
 {% block content %}
 {% load static %}
 
-    <h2>Tasks:</h2>
-    <table>
+
+  <div class="header-bar">
+    <div>
+      <h3>Hello {{ request.user|title }},</h3>
+      <h3 style="margin:0">You have <i>{{ count }}</i> incomplete task{{ count|pluralize:"s" }}</h3>
+    </div>
+    {% if request.user.is_authenticated %}
+      <a href="{% url 'logout' %}">Logout</a>
+    {% else %}
+      <a href="{% url 'login' %}">Login</a>
+    {% endif %}
+  </div>
+
+
+    <!-- <hr> -->
+
+    <!-- Remember why we setting up urls! -->
+    <!-- <a href="{% url 'task-create' %}">Add Task</a>
+
+    <form method="get">
+      <input type="text" name="search-area" value="{{ search_input }}">
+      <input type="submit" value="Search">
+    </form> -->
+
+    <div class="task-items-wrapper">
+      {% for task in tasks %}
+      <div class="task-wrapper">
+
+        {% if task.complete %}
+        <div class="task-title">
+              <div class="task-complete-icon"></div>
+                <i><s><a href="{% url 'task-update' task.id %}">{{ task }}</a></s></i>
+              </div>
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+
+          {% else %}
+          <div class="task-title">
+            <div class="task-incomplete-icon"></div>
+            <a href="{% url 'task-update' task.id %}">{{ task }}</a>
+          </div>
+          <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+
+          {% endif %}
+
+      </div>
+
+      {% empty %}
+          <h3>No items in list</h3>
+      {% endfor %}
+
+    </div>
+
+    <!-- <div class="task-items-wrapper">
+    {% for task in tasks %}
+    <div class="task-wrapper">
+        <div class="task-title">
+            {% if task.complete %}
+            <div class="task-complete-icon"></div>
+            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i> {% else %}
+            <div class="task-incomplete-icon"></div>
+            <a href="{% url 'task-update' task.id %}">{{task}}</a> {% endif %}
+        </div>
+        <div class="task-controls">
+            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
+            <span class="handle">&nbsp;&#10247;</span>
+        </div>
+    </div>
+
+    {% empty %}
+    <h3>No items in list</h3>
+    {% endfor %}
+</div> -->
+
+    <!-- <table>
       <tr>
         <th>Item</th>
-        <!-- An empty header so that table looks correct -->
+        An empty header so that table looks correct
         <th></th>
         <th></th>
         <th></th>
@@ -21,6 +93,6 @@
       {% empty %}
           <h3>No items in list</h3>
       {% endfor %}
-    </table>
+    </table> -->
 
-{% endblock %}
+{% endblock content %}
