--- a/base/templates/base/login.html
+++ b/base/templates/base/login.html
@@ -2,12 +2,14 @@
 {% block content %}
 {% load static %}
 
+  <div class="card-body">
   <h3>Login</h3>
-  <form class="" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value='Login'>
-  </form>
+    <form class="" action="" method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input class="button" type="submit" value='Login'>
+    </form>
+  </div>
 
   <p>Don't have an account? <a href="{% url 'register' %}">Register</a></p>
 {% endblock %}
