--- a/base/templates/base/register.html
+++ b/base/templates/base/register.html
@@ -2,13 +2,19 @@
 {% block content %}
 {% load static %}
 
-  <h3>Register</h3>
-  <form class="" action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value='Register'>
-  </form>
-
+  <div class="card-body">
+    <h3>Register</h3>
+    <form class="" action="" method="post">
+      {% csrf_token %}
+      <label>{{ form.username.label }}</label>
+      {{ form.username }}
+      <label>{{ form.password1.label }}</label>
+      {{ form.password1 }}
+      <label>{{ form.password2.label }}</label>
+      {{ form.password2 }}
+      <input class="button" type="submit" value='Register'>
+    </form>
+  </div>
 <p>Already have an account? <a href="{% url 'login' %}">Login</a></p>
 
 {% endblock %}
