--- a/base/templates/base/task_confirm_delete.html
+++ b/base/templates/base/task_confirm_delete.html
@@ -3,13 +3,13 @@
 {% block content %}
 {% load static %}
 
-  <a href="{% url 'tasks' %}">Cancel</a>
-
+  <div class="card-body">
+  <a href="{% url 'tasks' %}"><b><h4>&#8592; Go back</h4></b>  </a>
   <!-- We do need to create a post request for deletion therefore form is required -->
   <form method="post">
     {% csrf_token %}
     <p>Are you sure you want to delete this task ? {{ task }}</p>
-    <input type="submit" value="Delete">
+    <input class="button" type="submit" value="Delete">
   </form>
-
+  </div>
 {% endblock %}
