--- a/base/templates/base/task_form.html
+++ b/base/templates/base/task_form.html
@@ -2,13 +2,19 @@
 {% block content %}
 {% load static %}
 
-  <h3>Task Form:</h3>
-  <a href="{% url 'tasks' %}">Go back</a>
 
-  <form action="" method="post">
-    {% csrf_token %}
-    {{ form.as_p }}
-    <input type="submit" value="Submit">
-  </form>
+  <!-- <h3>Task Form:</h3> -->
+  <div class="header-bar">
+    <a href="{% url 'tasks' %}"><b><h4>&#8592; Go back</h4></b></a>
+  </div>
+
+  <div class="card-body">
+    <form action="" method="post">
+      {% csrf_token %}
+      {{ form.as_p }}
+      <input class="button" type="submit" value="Submit">
+    </form>
+  </div>
+
 
 {% endblock %}
