--- a/base/templates/base/task_list.html
+++ b/base/templates/base/task_list.html
@@ -6,7 +6,7 @@
   <div class="header-bar">
     <div>
       <h3>Hello {{ request.user|title }},</h3>
-      <h3 style="margin:0">You have <i>{{ count }}</i> incomplete task{{ count|pluralize:"s" }}</h3>
+      <h5 style="margin:0">You have <i>{{ count }}</i> incomplete task{{ count|pluralize:"s" }}</h5>
     </div>
     {% if request.user.is_authenticated %}
       <a href="{% url 'logout' %}">Logout</a>
@@ -16,15 +16,15 @@
   </div>
 
 
-    <!-- <hr> -->
+    <div id="search-add-wrapper">
+      <form method="get">
+        <input type="text" name="search-area" value="{{ search_input }}">
+        <input class="button" type="submit" value="Search">
+      </form>
+      <!-- Remember why we setting up urls! -->
+      <a id="add-link" href="{% url 'task-create' %}">&#x2b</a>
+    </div>
 
-    <!-- Remember why we setting up urls! -->
-    <!-- <a href="{% url 'task-create' %}">Add Task</a>
-
-    <form method="get">
-      <input type="text" name="search-area" value="{{ search_input }}">
-      <input type="submit" value="Search">
-    </form> -->
 
     <div class="task-items-wrapper">
       {% for task in tasks %}
@@ -43,56 +43,12 @@
             <a href="{% url 'task-update' task.id %}">{{ task }}</a>
           </div>
           <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
-
-          {% endif %}
-
+        {% endif %}
       </div>
 
       {% empty %}
           <h3>No items in list</h3>
       {% endfor %}
-
     </div>
-
-    <!-- <div class="task-items-wrapper">
-    {% for task in tasks %}
-    <div class="task-wrapper">
-        <div class="task-title">
-            {% if task.complete %}
-            <div class="task-complete-icon"></div>
-            <i><s><a href="{% url 'task-update' task.id %}">{{task}}</a></s></i> {% else %}
-            <div class="task-incomplete-icon"></div>
-            <a href="{% url 'task-update' task.id %}">{{task}}</a> {% endif %}
-        </div>
-        <div class="task-controls">
-            <a class="delete-link" href="{% url 'task-delete' task.id %}">&#215;</a>
-            <span class="handle">&nbsp;&#10247;</span>
-        </div>
-    </div>
-
-    {% empty %}
-    <h3>No items in list</h3>
-    {% endfor %}
-</div> -->
-
-    <!-- <table>
-      <tr>
-        <th>Item</th>
-        An empty header so that table looks correct
-        <th></th>
-        <th></th>
-        <th></th>
-      </tr>
-      {% for task in tasks %}
-      <tr>
-        <td>{{ task.title }}</td>
-        <td><a href="{% url 'task' task.id %}">View</a></td>
-        <td><a href="{% url 'task-update' task.id %}">Edit</a></td>
-        <td><a href="{% url 'task-delete' task.id %}">Delete</a></td>
-      </tr>
-      {% empty %}
-          <h3>No items in list</h3>
-      {% endfor %}
-    </table> -->
 
 {% endblock content %}
